model with 2048 features

--- a/configs/config_summe_canonical_2048_2.json
+++ b/configs/config_summe_canonical_2048_2.json
@@ -3,14 +3,14 @@
         "learning_rate": 0.00005,
         "weight_decay": 0.00001,
         "epochs_max": 300,
-        "googlenet": true,
+        "googlenet": false,
         "resnext": false,
-        "inceptionv3": false,
-        "i3d_rgb": true,
-        "i3d_flow": true,
-        "resnet3d": false,
-        "type_dataset": "tvsum",
-        "type_setting": "aug",
+        "inceptionv3": true,
+        "i3d_rgb": false,
+        "i3d_flow": false,
+        "resnet3d": true,
+        "type_dataset": "summe",
+        "type_setting": "canonical",
         "sameAccStopThres": 50,
         "transformations_path": "/data/shuaman/video_summarization/datasets/processed_datasets/transformations.pk"
     },
@@ -25,13 +25,13 @@
         "path_split_summe_canonical": "/home/shuaman/video_sm/video_summarization/splits/vasnet_splits/summe_splits.json",
         "path_split_tvsum_canonical": "/home/shuaman/video_sm/video_summarization/splits/vasnet_splits/tvsum_splits.json",
         "path_split_summe_aug": "/home/shuaman/video_sm/video_summarization/splits/vasnet_splits/summe_aug_splits.json",
-        "path_split_tvsum_aug": "/home/shuaman/video_sm/video_summarization/splits/vsm_splits/tvsum_aug_splits.json",
+        "path_split_tvsum_aug": "/home/shuaman/video_sm/video_summarization/splits/vasnet_splits/tvsum_aug_splits.json",
         "path_split_summe_non_overlap_ord": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/summe_ordered_non_overlap_splits.json",
         "path_split_summe_non_overlap_rand": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/summe_random_non_overlap_splits.json",
         "path_split_tvsum_non_overlap_ord": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/tvsum_ordered_non_overlap_splits.json",
         "path_split_tvsum_non_overlap_rand": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/tvsum_random_non_overlap_splits.json"
     },
-    "save_weights": true,
+    "save_weights": false,
     "num_backups": 2,
     "path_saved_weights": "/data/shuaman/video_summarization/datasets/weights_trained/",
     "weights_default": "weights_default"
