--- a/configs/config_summe_2048.json
+++ b/configs/config_summe_2048.json
@@ -3,13 +3,13 @@
         "learning_rate": 0.00005,
         "weight_decay": 0.00001,
         "epochs_max": 300,
-        "googlenet": true,
-        "resnext": false,
-        "inceptionv3": false,
-        "i3d_rgb": true,
-        "i3d_flow": true,
-        "resnet3d": false,
-        "type_dataset": "tvsum",
+        "googlenet": false,
+        "resnext": true,
+        "inceptionv3": true,
+        "i3d_rgb": false,
+        "i3d_flow": false,
+        "resnet3d": true,
+        "type_dataset": "summe",
         "type_setting": "canonical",
         "sameAccStopThres": 50,
         "transformations_path": "/data/shuaman/video_summarization/datasets/processed_datasets/transformations.pk"
@@ -28,10 +28,16 @@
         "path_split_tvsum_aug": "/home/shuaman/video_sm/video_summarization/splits/vsm_splits/tvsum_aug_splits.json",
         "path_split_summe_non_overlap_ord": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/summe_ordered_non_overlap_splits.json",
         "path_split_summe_non_overlap_rand": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/summe_random_non_overlap_splits.json",
+        "path_split_summe_non_overlap_ord_aug": "/home/shuaman/video_sm/video_summarization/splits/vsm_splits/summe_ordered_non_overlap_splits_aug.json",
+        "path_split_summe_non_overlap_rand_aug": "/home/shuaman/video_sm/video_summarization/splits/vsm_splits/summe_random_non_overlap_splits_aug.json",
         "path_split_tvsum_non_overlap_ord": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/tvsum_ordered_non_overlap_splits.json",
-        "path_split_tvsum_non_overlap_rand": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/tvsum_random_non_overlap_splits.json"
+        "path_split_tvsum_non_overlap_rand": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/tvsum_random_non_overlap_splits.json",
+        "path_split_tvsum_non_overlap_ord_aug": "/home/shuaman/video_sm/video_summarization/splits/vsm_splits/tvsum_ordered_non_overlap_splits_aug.json",
+        "path_split_tvsum_non_overlap_rand_aug": "/home/shuaman/video_sm/video_summarization/splits/vsm_splits/tvsum_random_non_overlap_splits_aug.json",
+        "path_split_summe_transfer": "/home/shuaman/video_sm/video_summarization/splits/vsm_splits/summe_transfer.json",
+        "path_split_tvsum_transfer": "/home/shuaman/video_sm/video_summarization/splits/vsm_splits/tvsum_transfer.json"
     },
-    "save_weights": true,
+    "save_weights": false,
     "num_backups": 2,
     "path_saved_weights": "/data/shuaman/video_summarization/datasets/weights_trained/",
     "weights_default": "weights_default"
