--- a/configs/config_tvsum_canonical_2048.json
+++ b/configs/config_tvsum_canonical_2048.json
@@ -5,11 +5,11 @@
         "epochs_max": 300,
         "googlenet": false,
         "resnext": true,
-        "inceptionv3": false,
+        "inceptionv3": true,
         "i3d_rgb": false,
         "i3d_flow": false,
         "resnet3d": true,
-        "type_dataset": "summe",
+        "type_dataset": "tvsum",
         "type_setting": "canonical",
         "sameAccStopThres": 50,
         "transformations_path": "/data/shuaman/video_summarization/datasets/processed_datasets/transformations.pk"
@@ -24,8 +24,8 @@
     "splits":{
         "path_split_summe_canonical": "/home/shuaman/video_sm/video_summarization/splits/vasnet_splits/summe_splits.json",
         "path_split_tvsum_canonical": "/home/shuaman/video_sm/video_summarization/splits/vasnet_splits/tvsum_splits.json",
-        "path_split_summe_aug": "/home/shuaman/video_sm/video_summarization/splits/vasnet_splits/summe_aug_splits.json",
-        "path_split_tvsum_aug": "/home/shuaman/video_sm/video_summarization/splits/vasnet_splits/tvsum_aug_splits.json",
+        "path_split_summe_aug": "/home/shuaman/video_sm/video_summarization/splits/vsm_splits/summe_aug_splits.json",
+        "path_split_tvsum_aug": "/home/shuaman/video_sm/video_summarization/splits/vsm_splits/tvsum_aug_splits.json",
         "path_split_summe_non_overlap_ord": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/summe_ordered_non_overlap_splits.json",
         "path_split_summe_non_overlap_rand": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/summe_random_non_overlap_splits.json",
         "path_split_tvsum_non_overlap_ord": "/home/shuaman/video_sm/video_summarization/splits/msva_splits/tvsum_ordered_non_overlap_splits.json",
