--- a/configs/config_summe_2048.json
+++ b/configs/config_summe_2048.json
@@ -1,5 +1,6 @@
 {
     "hparams": {
+        "feature_len": 2048,
         "learning_rate": 0.00005,
         "weight_decay": 0.00001,
         "epochs_max": 300,
