--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,4 @@ python-multipart==0.0.5
 google-auth-oauthlib==0.4.4 
 google-api-python-client==2.8.0
 google-auth-httplib2==0.1.0
+aiofiles==3.7.2
